# Langgraph-replicate-with-AI

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL_GLOBAL.md  LICENSE  README.md  SETUP_API_KEY.md  SYSTEM_PROMPT.md  install-global.sh  project_notes.md  pyproject.toml  requirements.txt
docs/: architecture.md
file_agent/: __init__.py  agent.py  cli.py  config.py  file_ops.py  prompts.py  utils.py
tests/: __init__.py  test_config.py  test_file_ops.py  test_utils.py
